fix spacing issue in toggle toolbar

--- a/packages/assets/css/src/scss/_utils/_tokens.scss
+++ b/packages/assets/css/src/scss/_utils/_tokens.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Wed, 06 Nov 2024 16:01:18 GMT
+// Generated on Thu, 07 Nov 2024 11:43:00 GMT
 
 $accordion-border-radius-sm: 10px;
 $advanced-banner-background: linear-gradient(90deg, #222 0%, #383323 48.96%, #514524 100%);
@@ -566,7 +566,7 @@ $spinner-stroke-dashoffset: 200;
 $spinner-stroke-dasharray: 276.4608;
 $summary-size-height-md: 24px;
 $table-width-xs: 100px;
-$table-width-sm: 185px;
+$table-width-sm: 216px;
 $table-width-md: 320px;
 $table-width-lg: 380px;
 $table-height-sm: 60px;
